Closed
Bug 812817
Opened 13 years ago
Closed 13 years ago
"ASSERTION: Invalid display item type!" with Ctrl+Tab preview of about:memory
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: jruderman, Assigned: roc)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
|
9.20 KB,
text/plain
|
Details | |
|
4.41 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
1. Create a profile with:
user_pref("browser.ctrlTab.previews", true);
2. Launch Firefox
3. Ensure you have exactly one tab open
4. ⌘T, about:memory, Enter
5. ⌘T, about:memory, Enter
6. Ctrl+Tab
Result:
###!!! ASSERTION: Invalid display item type!: 'type > TYPE_ZERO && type < TYPE_MAX', file nsDisplayItemTypes.h, line 69
This assertion is part of code added in bug 798964. When the assertion fails, type is nsDisplayItem::TYPE_ZERO.
| Assignee | ||
Comment 1•13 years ago
|
||
Those STR do not work for me on Windows. Mac-only?
| Assignee | ||
Comment 2•13 years ago
|
||
FrameLayerBuilder::BuildContainerLayerFor can pass 0 as the display item key when constructing a root layer. So if the root frame of the root document has a background image, we'll hit this assertion. I suspect that's what's happening here.
| Assignee | ||
Comment 3•13 years ago
|
||
Assignee: nobody → roc
Attachment #682964 -
Flags: review?(matt.woodrow)
Updated•13 years ago
|
Attachment #682964 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•