Bug 812817. Ignore TYPE_ZERO nsDisplayItemData records constructed for the root layer. r=mattwoodrow